--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-3.59MB/s(Youtube:不良林), server: 85.208.108.18, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇩🇪 德国-1.86MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 38.86.135.27, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 波兰-494.7KB/s(Youtube:不良林), server: 217.30.10.66, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
-  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-353.0KB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林), server: 213.183.53.208, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: 38.86.135.27, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-2.50MB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-422.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-1.94MB/s(Youtube:不良林), server: 38.86.135.27, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-2.32MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-3.62MB/s(Youtube:不良林), server: 38.114.114.67, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇺🇸 美国-1.24MB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-2.09MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-1.59MB/s(Youtube:不良林), server: 38.86.135.27, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 波兰-494.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-353.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 波兰-494.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-353.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 波兰-494.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-353.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 波兰-494.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-353.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 波兰-494.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-353.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 波兰-494.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-353.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 波兰-494.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-353.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-422.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
