--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-197.6KB/s(Youtube:不良林), server: 120.233.29.189, port: 65071, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
-  - {name: 🇫🇷 法国-2.82MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇯🇵 日本-2.50MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林), server: 213.183.53.208, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 波兰-1.02MB/s(Youtube:不良林), server: 217.30.10.65, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇺🇸 美国-2.25MB/s(Youtube:不良林), server: 38.75.136.102, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-350.8KB/s(Youtube:不良林), server: 38.114.114.69, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇸🇬 新加坡-2.77MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.51MB/s(Youtube:不良林), server: 38.114.114.69, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇩🇪 德国-598.9KB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-2.32MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-2.54MB/s(Youtube:不良林), server: 38.114.114.67, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇺🇸 美国-2.16MB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: 38.121.43.71, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: 38.86.135.27, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-197.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 波兰-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇩🇪 德国-598.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-197.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 波兰-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇩🇪 德国-598.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-197.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 波兰-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇩🇪 德国-598.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-197.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 波兰-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇩🇪 德国-598.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-197.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 波兰-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇩🇪 德国-598.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-197.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 波兰-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇩🇪 德国-598.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-197.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.95MB/s(Youtube:不良林)
-      - 波兰-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇩🇪 德国-598.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
